--- a/scss/media.scss
+++ b/scss/media.scss
@@ -211,8 +211,9 @@
             }
             a button {
                 top: -20px;
-                left: -352px;
-                padding: 30px 20px 30px 20px;
+                left: -380px;
+                width: 100px;
+                height: 100px;
             }
         }
     }
